...
@Preview(name = "Light", showBackground = true)
@Preview(name = "Dark", showBackground = true, uiMode = Configuration.UI_MODE_NIGHT_YES)
@Composable
private fun SearchBarPreview() {
    AcerolaTheme {
        Acerola.Component.SearchBar<String>(
            query = "One Piece",
            onQueryChange = {},
            onSearch = {},
            expanded = true,
            onExpandedChange = {},
            items = listOf("One Piece - Vol. 1", "One Piece - Vol. 2", "One Piece - Film Red"),
            placeholder = stringResource(R.string.label_home_search_placeholder),
...
